--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello!</title>
+        <title>Static website</title>
     </head>
     <body>
-        Hello, World!
+        <h1>Welcome to my website!</h1>
+        <h3>This is an example of static website</h3>
     </body>
 </html>
