--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my website!</h1>
+        <h2>Hello from H2</h2>
         <h3>This is an example of static website</h3>
     </body>
 </html>
