--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,14 @@
 <html lang="en">
     <head>
         <title>Static website</title>
+        <style>
+            h1 {
+                color: blue;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color:blue;">Welcome to my website!!</h1>
+        <h1>Welcome to my website!!</h1>
         <h2>Hello from H2</h2>
         <h3>This is an example of static website</h3>
     </body>
