--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Static website</title>
-        <style>
-            h1 {
-                color: blue;
-            }
-        </style>
-    </head>
-    <body>
-        <h1 style="color:blue;">Welcome to my website!</h1>
-        <h2>Hello from H2</h2>
-        <h3>This is an example of static website</h3>
-    </body>
+<!DOCTYPE HTML>
+
+
+<html>
+
+<head>
+	<title>Jack Kiwema</title>
+	<meta charset="utf-8" />
+	<meta name="description" content="Location : 127.0.0.1:1337/jackkiwema &amp; U1FgpxieKrOnly5GJg3TiA==">
+	<meta name="keywords"
+		content="customer support engineer, customer support technician, jack kiwema, jackson seth kiwema olum, olum, kiwema, seth, jackson, front end developer">
+	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="revisit-after" content="1 days">
+	<meta name="author" content="Jack Kiwema">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="stylesheet" href="assets/css/main.css" />
+
+	<link rel="shortcut icon" href="assets/css/images/icon.ico">
+
+</head>
+
+<body class="loading">
+	<div id="wrapper">
+		<div id="bg"></div>
+		<div id="overlay"></div>
+		<div id="main">
+
+			<!-- Header -->
+			<header id="header">
+				<h1>Jack Kiwema</h1>
+				<p>System Administrator &nbsp;&bull;&nbsp;</p>
+				<nav>
+					<ul>
+						<li><a href="https://twitter.com/jokseth" class="icon fa-twitter" target="_blank"><span
+									class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/jackson-olum-career/" class="icon fa-linkedin"
+								target="_blank"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCcem44nb8_VG_n8JNwmdImg"
+								class="icon fa-youtube-play" target="_blank"><span class="label">YouTube</span></a></li>
+						<li><a href="https://github.com/jackkiwema" class="icon fa-github" target="_blank"><span
+									class="label">Github</span></a></li>
+						<li><a href="mailto:jackkiwema@gmail.com" class="icon fa-envelope-o" target="_blank"><span
+									class="label">Email</span></a></li>
+					</ul>
+				</nav>
+			</header>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<span class="copyright">&copy;Design by <a href="https://html5up.net/aerial"> html5up.net </a>.</span>
+			</footer>
+
+		</div>
+	</div>
+
+	<script>
+		window.onload = function () {
+			document.body.className = '';
+		}
+		window.ontouchmove = function () {
+			return false;
+		}
+		window.onorientationchange = function () {
+			document.body.scrollTop = 0;
+		}
+	</script>
+</body>
+
 </html>
