Updated sys admin

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<!-- Header -->
 			<header id="header">
 				<h1>Jack Kiwema</h1>
-				<p>System Administrator &nbsp;&bull;&nbsp;</p>
+				<p>&nbsp;&bull;&nbsp; System Administrator &nbsp;&bull;&nbsp;</p>
 				<nav>
 					<ul>
 						<li><a href="https://twitter.com/jokseth" class="icon fa-twitter" target="_blank"><span
@@ -50,7 +50,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<span class="copyright">&copy;Design by <a href="https://html5up.net/aerial"> html5up.net </a>.</span>
+				<span class="copyright">&copy;Design by <a href="https://jackkiwema.github.io/hello-intro/"> Jack Kiwema </a>.</span>
 			</footer>
 
 		</div>
