--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 
-
 <html>
 
 <head>
@@ -50,7 +49,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<span class="copyright">&copy;Design by <a href="https://jackkiwema.github.io/hello-intro/"> Jack Kiwema </a>.</span>
+				<span class="copyright">&copy;<a href="https://jackkiwema.github.io/hello-intro/"> Jack Kiwema </a>.</span>
 			</footer>
 
 		</div>
