--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<link rel="stylesheet" href="assets/css/main.css" />
 
-	<link rel="shortcut icon" href="assets/css/images/icon.ico">
+	<link rel="shortcut icon" href="assets/css/images/icon.png">
 
 </head>
 
