--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Easy Tutorials</title>
+        <title>Waterfall</title>
         <link rel="stylesheet" type="text/css" href="app/css/style.css">
         <!-- Font- awesome codes -->
         <script src="https://kit.fontawesome.com/5e8b8bd7e4.js" crossorigin="anonymous"></script>
