--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Waterfall</title>
         <link rel="stylesheet" type="text/css" href="app/css/style.css">
-        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins">
         <!-- Font- awesome codes -->
         <script src="https://kit.fontawesome.com/5e8b8bd7e4.js" crossorigin="anonymous"></script>
     </head>
