Updated Home page link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<span class="copyright">&copy;<a href="https://jackkiwema.github.io/hello-intro/"> Jack Kiwema </a>.</span>
+				<span class="copyright">&copy;<a href="https://jackkiwema.github.io/"> Jack Kiwema </a>.</span>
 			</footer>
 
 		</div>
