--- a/index.html
+++ b/index.html
@@ -52,34 +52,9 @@
 				</nav>
 			</header>
 
-            <div class="hero">
-                <form>
-                    <div class="row">
-                        <div class="input-group">
-                            <input type="text" id="name" required>
-                            <label for="name"><i class="fa-solid fa-user"></i> Your Name</label>
-                        </div>
-                        <div class="input-group">
-                            <input type="text" id="number" required>
-                            <label for="number"><i class="fas fa-square-phone"></i> Phone No.</label>
-                        </div>
-                    </div>
-                        <div class="input-group">
-                            <input type="email" id="email" required>
-                            <label for="email"><i class="fas fa-envelope"></i> Email ID</label>
-                        </div>
-                    <div class="input-group">
-                        <textarea id="message" rows="8" required></textarea>
-                        <label for="message"><i class="fas fa-comments"></i> Your Message</label>
-                    </div>
-                    <button type="submit">SUBMIT <i class="fas fa-paper-plane"></i></button>
-                    
-                </form>
-            </div>
-
 			<!-- Footer -->
 			<footer id="footer">
-				<span class="copyright">&copy;<a href="https://jackkiwema.github.io/hello-intro/"> Jack Kiwema </a>.</span>
+				<span class="copyright">&copy;<a href="https://jackkiwema.github.io/"> Jack Kiwema </a>.</span>
 			</footer>
 
 		</div>
